<?xml version="1.0" encoding="UTF-8"?>
<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

      https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">

  <parent>
    <groupId>org.apache.plc4x.extras</groupId>
    <artifactId>plc4j-integrations</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>plc4j-apache-flink</artifactId>

  <name>PLC4J: Integrations: Apache Flink</name>
  <description>Integration module for integrating PLC4X into Apache Flink.</description>


  <properties>
    <project.build.outputTimestamp>2025-08-06T15:45:09Z</project.build.outputTimestamp>
    <java.version>21</java.version>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <flink.version>2.3.0</flink.version>
  </properties>



	<dependencies>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <!-- TODO: hace falta?? -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.plc4x</groupId>
			<artifactId>plc4j-api</artifactId>
			<version>${plc4x.version}</version>
		</dependency>

    <!-- Bundle Drivers -->
		<dependency>
			<groupId>org.apache.plc4x</groupId>
			<artifactId>plc4j-driver-all</artifactId>
			<version>${plc4x.version}</version>
			<type>pom</type>
    </dependency>
		

		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
		<!-- TODO: hace falta?? -->
    <dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>




    <dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-streaming-java</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-core</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-clients</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- SourceReaderBase, SplitFetcherManager, SingleThreadFetcherManager, RecordEmitter -->
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-connector-base</artifactId>
			<version>${flink.version}</version>
			<scope>provided</scope>
		</dependency>




		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <!-- TODO: hace falta?? Debería estar incluído en Flink. Y es posible que con otra versión-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.11</version>
			<scope>provided</scope>
		</dependency>

    <!-- TODO: hace falta?? Este sobra. Entiendo que está aquí para testing-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.11</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <!-- TODO: hace falta?? -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.16.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.json/json -->
    <!-- TODO: hace falta?? -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20231013</version>
		</dependency>



		<!--Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>2.0.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.21.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-test-utils</artifactId>
			<version>${flink.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>toxiproxy</artifactId>
			<version>1.21.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-runtime</artifactId>
			<version>${flink.version}</version>
			<classifier>tests</classifier>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-metrics-prometheus</artifactId>
			<version>${flink.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>


  <build>
    <plugins>
      <!-- https://stackoverflow.com/questions/70196098/how-can-i-specify-add-opens-from-a-project-level-and-make-sure-it-is-taken-int -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          

          <!-- TODO: hace falta? -->
          <archive>
            <manifestEntries>
              <Add-Opens>java.base/sun.util.calendar java.base/java.util </Add-Opens>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>